Fixed some gap issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 body{
   font-family: "Lato", sans-serif;
 }
+html{
+  scroll-behavior: smooth;
+}
 
 .lato-400 {
   font-family: "Lato", sans-serif;
